# html-utils

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
html_utils/: main.py  scraping.py  utils.py
tests/: test_api.py
tests/html_snapshots/: empty_but_valid_html.html  pydantic.html
